hphp/test/slow/inout/bad-arg-this.php.expectf
Fatal error: You cannot use this syntax with `inout`. in %s/bad-arg-this.php on line 8
